--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="transporte, carga, logistico, flete, camion, camioneta, despachar, mudanza, reembolso, deposito, servicio, descarga, retiro, paquete, confianza, entrega, mercaderia, puntualidad"/>
+    <meta name="description" content="En Transporte LG estamos en busqueda diariamente de la satisfacción total de nuestros clientes y reafirmando la confianza dia a dia en conjunto."/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>TransporteLG</title>
   </head>
   <body>
     <header>
-      <a href=""><img class="logo" src="./img/logo.png" alt="" target="_blank" /></a>
+      <a href=""><img class="logo" src="./img/logo.png" alt="logolg" target="_blank" /></a>
       <nav>
         <ul>
           <li><a href="./index.html">inicio</a></li>
