--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="transporte, carga, logistico, flete, camion, camioneta, despachar, mudanza, reembolso, deposito, servicio, descarga, retiro, paquete, confianza, entrega, mercaderia, puntualidad"/>
-    <meta name="description" content="En Transporte LG estamos en busqueda diariamente de la satisfacción total de nuestros clientes y reafirmando la confianza dia a dia en conjunto."/>
+    <meta
+      name="keywords"
+      content="transporte, carga, logistico, flete, camion, camioneta, despachar, mudanza, reembolso, deposito, servicio, descarga, retiro, paquete, confianza, entrega, mercaderia, puntualidad"
+    />
+    <meta
+      name="description"
+      content="En Transporte LG estamos en busqueda diariamente de la satisfacción total de nuestros clientes y reafirmando la confianza dia a dia en conjunto."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,7 +19,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
     <title>Contactos</title>
   </head>
   <body>
@@ -32,46 +38,69 @@
       </nav>
     </header>
     <main>
-        <section class="fondocontactos">
-          <h1>CONTACTOS</h1>
-        </section>
-        <section class="sectioncontactos">
+      <section class="fondocontactos">
+        <h1>CONTACTOS</h1>
+      </section>
+      <section class="sectioncontactos">
         <h2>
           Dudas, consultas: escribinos y a la brevedad nos pondremos en contacto
           con vos.
         </h2>
       </section>
-        <section class="formularioback">
-          <div class="row g-3">
-            <div class="col-12">
-              <input type="text" class="form-control" placeholder="Nombre y Apellido*" aria-label="Nombre y Apellido">
-            </div>
-            <div class="col-12">
-              <input type="number" class="form-control" placeholder="Telefono*" aria-label="Telefono">
-            </div>
-            <div class="col-12">
-              <input type="email" class="form-control" placeholder="Email*" aria-label="Email">
-            </div>
-            <div>
-              <h2>¿ Que tipo de transporte necesita ?</h2>
-            </div>
-            <br />
-            <select name="transportes">
-              <option value="Transporte deseado">Transporte deseado</option>
-              <option value="Camion">Camion</option>
-              <option value="Camioneta">Camioneta</option>
-              <option value="Miniflete">Miniflete</option>
-            </select>
-            <br />
-              <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Mensaje opcional</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
-              <div class="subreset col-12">
-                <button type="submit" class="btn btn-outline-dark">enviar</button>
-                <button type="reset" class="btn btn-outline-dark">restablecer</button>
-              </div>
-            </div>
+      <section class="formularioback">
+        <div class="row g-3">
+          <div class="col-12">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Nombre y Apellido*"
+              aria-label="Nombre y Apellido"
+            />
+          </div>
+          <div class="col-12">
+            <input
+              type="number"
+              class="form-control"
+              placeholder="Telefono*"
+              aria-label="Telefono"
+            />
+          </div>
+          <div class="col-12">
+            <input
+              type="email"
+              class="form-control"
+              placeholder="Email*"
+              aria-label="Email"
+            />
+          </div>
+          <div>
+            <h2>¿ Que tipo de transporte necesita ?</h2>
+          </div>
+          <br />
+          <select name="transportes">
+            <option value="Transporte deseado">Transporte deseado</option>
+            <option value="Camion">Camion</option>
+            <option value="Camioneta">Camioneta</option>
+            <option value="Miniflete">Miniflete</option>
+          </select>
+          <br />
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label"
+              >Mensaje opcional</label
+            >
+            <textarea
+              class="form-control"
+              id="exampleFormControlTextarea1"
+              rows="3"
+            ></textarea>
+          </div>
+          <div class="subreset col-12">
+            <button type="submit" class="btn btn-outline-dark">enviar</button>
+            <button type="reset" class="btn btn-outline-dark">
+              restablecer
+            </button>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
