--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="transporte, carga, logistico, flete, camion, camioneta, despachar, mudanza, reembolso, deposito, servicio, descarga, retiro, paquete, confianza, entrega, mercaderia, puntualidad"/>
-    <meta name="description" content="En Transporte LG estamos en busqueda diariamente de la satisfacción total de nuestros clientes y reafirmando la confianza dia a dia en conjunto."/>
+    <meta
+      name="keywords"
+      content="transporte, carga, logistico, flete, camion, camioneta, despachar, mudanza, reembolso, deposito, servicio, descarga, retiro, paquete, confianza, entrega, mercaderia, puntualidad"
+    />
+    <meta
+      name="description"
+      content="En Transporte LG estamos en busqueda diariamente de la satisfacción total de nuestros clientes y reafirmando la confianza dia a dia en conjunto."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,7 +19,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
     <title>Nosotros</title>
   </head>
   <body>
