--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <a href=""><img class="logo" src="./img/logo.png" alt="logolg" target="_blank" /></a>
+      <a href=""><img class="logo" src="./img/LOGO.png" alt="logolg" target="_blank" /></a>
       <nav>
         <ul>
           <li><a href="./index.html">inicio</a></li>
